Added a couple spring profiles because they can be very useful for configuring on different environments.

--- a/project1-backend/src/main/resources/application-server.properties
+++ b/project1-backend/src/main/resources/application-server.properties
@@ -1,5 +1,5 @@
 
-#This is the default spring profile
+#This is spring profile is a space to configure this to run a server one day maybe.
 
 spring.application.name=project1
 
