--- a/project1-backend/pom.xml
+++ b/project1-backend/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>javax.annotation-api</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<!-- Brought in for @Entity @Table @NotNull annotations -->
+		<dependency>
+			<groupId>org.apache.aries.jpa.javax.persistence</groupId>
+			<artifactId>javax.persistence_2.1</artifactId>
+			<!--<artifactId>javax.persistence_2.0</artifactId>-->
+			<version>2.7.3</version>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
