--- a/project1-backend/src/main/resources/application-myLocal.properties
+++ b/project1-backend/src/main/resources/application-myLocal.properties
@@ -9,10 +9,29 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
+#May be selected automatically
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Error was: Could not obtain connection to query metadata
-hibernate.temp.use_jdbc_metadata_defaults=false
+#hibernate.temp.use_jdbc_metadata_defaults=false
+
+# Prevent Hibernate from managing the schema
+#spring.jpa.hibernate.ddl-auto=none
+
+#action=create will generate the sql tables
+#create-target is file path is relative to where the jar is ran, such as a shell script
+#none 	- doesn't generate any DDL commands
+#create - generates only database create commands
+#drop 	- generates only database drop commands
+#drop-and-create - generates database drop commands followed by create commands
+#it appends sql to the file
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=drop
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=project1-backend/jpaGenerated/createDML.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.drop-target=project1-backend/jpaGenerated/dropDML.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.drop-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
