--- a/project1-backend/pom.xml
+++ b/project1-backend/pom.xml
@@ -67,6 +67,12 @@
 			<!--<artifactId>javax.persistence_2.0</artifactId>-->
 			<version>2.7.3</version>
 		</dependency>
+		<!--Brought in for handy String and null checking functions-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
