--- a/project1-backend/src/main/resources/application-rsc.properties
+++ b/project1-backend/src/main/resources/application-rsc.properties
@@ -30,7 +30,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #drop 	- generates only database drop commands
 #drop-and-create - generates database drop commands followed by create commands
 #it appends sql to the file
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=drop
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=project1-backend/jpaGenerated/createDML.sql
 spring.jpa.properties.javax.persistence.schema-generation.scripts.drop-target=project1-backend/jpaGenerated/dropDML.sql
 spring.jpa.properties.javax.persistence.schema-generation.scripts.drop-source=metadata
