--- a/project1-backend/src/main/resources/application.properties
+++ b/project1-backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=project1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
