--- a/project1-backend/src/main/resources/application.properties
+++ b/project1-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=project1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://revature-paid-training-2024.c98uyyuwq4la.us-east-1.rds.amazonaws.com/postgres
+spring.datasource.username=eric
+spring.datasource.password=Revature2024
