Product and Category pushed

--- a/project1-backend/src/main/resources/application.properties
+++ b/project1-backend/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.application.name=project1
+spring.application.name=Project1
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://jeet-java-2406.c9qum80agbm0.us-east-2.rds.amazonaws.com/postgres
+spring.datasource.username=jeet
+spring.datasource.password=revature123
+spring.jpa.hibernate.ddl-auto=validate
