--- a/project1-backend/src/main/resources/application.properties
+++ b/project1-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Project1
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://jeet-java-2406.c9qum80agbm0.us-east-2.rds.amazonaws.com/postgres
-spring.datasource.username=jeet
-spring.datasource.password=revature123
+spring.datasource.url=jdbc:postgresql://revature-paid-training-2024.c98uyyuwq4la.us-east-1.rds.amazonaws.com/postgres
+spring.datasource.username=eric
+spring.datasource.password=Revature2024
 spring.jpa.hibernate.ddl-auto=validate
