--- a/project1-backend/src/main/resources/application-h2.properties
+++ b/project1-backend/src/main/resources/application-h2.properties
@@ -3,7 +3,7 @@
 #Would be nice to set the schema
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;INIT=RUNSCRIPT FROM 'classpath:schema.sql'
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -12,7 +12,8 @@ spring.datasource.platform=h2
 # Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.schema=classpath:schema.sql
 
 # H2 Console Configuration (Optional)
 #spring.h2.console.enabled=true
