--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,6 @@
-spring.application.name=projectfinalv
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-spring.jpa.properties.hibernate.default_schema=project1
-spring.datasource.username=postgres
-spring.datasource.password=password
-
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-
-
-server.port=8087
-
-
+spring.application.name=Project1
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://revature-paid-training-2024.c98uyyuwq4la.us-east-1.rds.amazonaws.com/postgres
+spring.datasource.username=eric
+spring.datasource.password=Revature2024
+spring.jpa.hibernate.ddl-auto=validate
