Changed cart so it fetches when a Route changes to it.

--- a/project1-backend/src/main/resources/application.properties
+++ b/project1-backend/src/main/resources/application.properties
@@ -9,8 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-
-server.port=8087
-
+#This was going crazy on mac
+#server.port=8087
 
 spring.datasource.driver-class-name=org.postgresql.Driver
